--- a/index.html
+++ b/index.html
@@ -413,6 +413,6 @@
     <!------------- swiper js  ------------->
     <script src=""></script>
     <!----------------- main js ----------------->
-    <script src="js/main.js"></script>
+    <script src="JS/main.js"></script>
 </body>
 </html>
