--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!---------- css ---------->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <!---------------- header ---------------->
