--- a/index.html
+++ b/index.html
@@ -459,6 +459,6 @@
     <!------------- swiper js  ------------->
     <script src="JS/cdn.jsdelivr.net_npm_swiper@10.3.1_swiper-bundle.min.js"></script>
     <!----------------- main js ----------------->
-    <script src="js/main.js"></script>
+    <script src="JS/main.js"></script>
 </body>
 </html>
