--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                        
                          <!---==================  project 1  ======================-->
                          <div class="project__content grid swiper-slide">
-                            <img src="img/raiment_ss.jpg" alt="" class="project__img">
+                            <img src="img/raiment_ss.png" alt="" class="project__img">
                             <div class="project__data">
                                 <h3 class="project__title">E-commerce</h3>
                                 <p class="project__description">as;dljfoaskdjfsj flsakdjf ;ask dfj;laskdf as;dfjaskl;jfaskl aslskdfjaksfj;lask aslkkdfjaskldjfkls alksdfjaksldfjlksadfj</p>
@@ -431,7 +431,7 @@
 
                          <!---==================  project 2  ======================-->
                          <div class="project__content grid swiper-slide">
-                            <img src="img/photography.jpg" alt="" class="project__img">
+                            <img src="img/photography.png" alt="" class="project__img">
                             <div class="project__data">
                                 <h3 class="project__title">Photography</h3>
                                 <p class="project__description">as;dljfoaskdjfsj flsakdjf ;ask dfj;laskdf as;dfjaskl;jfaskl aslskdfjaksfj;lask aslkkdfjaskldjfkls alksdfjaksldfjlksadfj</p>
