--- a/index.html
+++ b/index.html
@@ -215,6 +215,16 @@
 
                                 <div class="skills__data">
                                     <div class="skills__title">
+                                        <h3 class="skills__name">Bootstrap-5</h3>
+                                        <span class="skills__number">70%</span>
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__boot"></span>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <div class="skills__title">
                                         <h3 class="skills__name">JavaScript</h3>
                                         <span class="skills__number">80%</span>
                                     </div>
