--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <!------Home text data -------->
                     <div class="home__data">
                         <h1 class="home__title">Min Thiha Kyaw</h1>
-                        <h3 class="home__subtitle">I'm Front-end Developer</h3>
+                        <h3 class="home__subtitle">I'm Web Developer</h3>
                         <p class="home__description">Committed to refining my skills, embracing new technologies.</p> 
                         <a href="#contact" class="button button--flex">
                             Contant Me <i class="uil uil-message button__icon"></i>
@@ -156,7 +156,7 @@
                         </div>
                         
                         <div>
-                            <span class="about__info-title">01+</span>
+                            <span class="about__info-title">00</span>
                             <span class="about__info-name">Companies <br> worked</span>
                         </div>
                     </div>
