--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                              <!---=======  Qulifiication 1 ======-->
                             <div class="qualification__data">
                                 <div>
-                                    <h3 class="qualification__title">Advanced Diploma (HND) <br> Computer Networking</h3>
+                                    <h3 class="qualification__title">Advanced Diploma (HND) <br> Computer Networking & Cyber Security</h3>
                                     <span class="qualification__subtitle">UK - SQA Diploma</span>
                                     <div class="qualification__calender">
                                         <i class="uil uil-calendar-alt"></i>
@@ -365,7 +365,7 @@
                                     </div>
 
                                     <div>
-                                         <h3 class="qualification__title">BS.c (Hons) <br>Networking & Cyber Security </h3>
+                                         <h3 class="qualification__title">BS.c (Hons) <br>Computer Science  </h3>
                                          <span class="qualification__subtitle">Malaysia - Lincoln University</span>
                                             <div class="qualification__calender">
                                                  <i class="uil uil-calendar-alt"></i>
