--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                             <div class="project__data">
                                 <h3 class="project__title">Clothing Website</h3>
                                 <p class="project__description"> Raiment will prioritize user experience above all else. We aim to create a website that is easy to navigate, visually appealing, and provides a seamless shopping journey.</p>
-                                <a href="https://arrpound.github.io/raiment/" target="_blank" class="button button--flex button--small project__button">
+                                <a href="https://google.com/" target="_blank" class="button button--flex button--small project__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
