--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 
                 <div class="home__content grid">
                     <div class="home__social">
-                        <a href="https://www.facebook.com/profile.php?id=100084556717867" class="home__social-icon">
+                        <a href="https://www.facebook.com/minthiha.488" class="home__social-icon">
                             <i class="uil uil-facebook" target="_blank"></i>
                         </a>
                         <a href="https://github.com/ArrPound" class="home__social-icon">
