--- a/index.html
+++ b/index.html
@@ -90,13 +90,15 @@
                 
                 <div class="home__content grid">
                     <div class="home__social">
-                        <a href="https://www.facebook.com/minthiha.488" class="home__social-icon">
-                            <i class="uil uil-facebook" target="_blank"></i>
+                       <a href="https://www.facebook.com/profile.php?id=100084556717867" class="footer__social" target="_blank">
+                            <i class="uil uil-facebook" ></i>
                         </a>
-                        <a href="https://github.com/ArrPound" class="home__social-icon">
-                            <i class="uil uil-github" target="_blank"></i>
+
+                        <a href="https://github.com/ArrPound" class="footer__social" target="_blank">
+                            <i class="uil uil-github" ></i>
                         </a>
-                        <a href="https://www.instagram.com/dun_messwme/" class="home__social-icon">
+
+                        <a href="https://www.instagram.com/dun_messwme/" class="footer__social" target="_blank">
                             <i class="uil uil-instagram" target="_blank"></i>
                         </a>
                     </div>
