update html file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!---------------- header ---------------->
     <header class="header" id="header">
         <nav class="nav container">
-        <a href="#home" class="nav__logo"><span>Min Thk</span></a>
+        <a href="#home" class="nav__logo"><span>Arr Pound</span></a>
 
         <div class="nav__menu" id="nav-menu">
            
