--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--------swiper css-------->
     <link rel="stylesheet" href="css/cdn.jsdelivr.net_npm_swiper@10.3.1_swiper-bundle.min.css">
 
-    <title>Portfolio</title>
+    <title>Min Thk</title>
 </head>
 <body>
     <!---------------- header ---------------->
