--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <img src="img/about_img.jpeg" alt="" class="about__img">
 
                 <div class="about__data">
-                    <p class="about__description">My journey as a junior front-end developer is marked by a dedication to learning. <br> I approach every project with enthusiasm. My focus is always on creating web experiences that delight users. </p>
+                    <p class="about__description">My journey as Web-developer is marked by a dedication to learning. <br> I approach every project with enthusiasm. My focus is always on creating web experiences that delight users. </p>
                     
                     <div class="about__info">
                         <div>
