--- a/index.html
+++ b/index.html
@@ -91,11 +91,14 @@
                 <div class="home__content grid">
                     <div class="home__social">
 
-                          <a href="https://www.facebook.com/minthiha.488/" class="home__social-icon" target="_blank">
-                            <i class="uil uil-facebook"></i>
-                        </a>
                         <a href="https://github.com/ArrPound" class="home__social-icon" target="_blank">
                             <i class="uil uil-github"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/minthihadev22" class="home__social-icon" target="_blank">
+                            <i class="uil uil-linkedin-alt"></i>
+                        </a>
+                          <a href="https://www.facebook.com/minthiha.488/" class="home__social-icon" target="_blank">
+                            <i class="uil uil-facebook"></i>
                         </a>
                         <a href="https://www.instagram.com/dun_messwme/" class="home__social-icon" target="_blank">
                             <i class="uil uil-instagram"></i>
