--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 
                                 <div>
                                     <h3 class="contact__title">E-mail</h3>
-                                    <span class="contact__subtitle">minthihakyaw22x@gmail.com</span>
+                                    <span class="contact__subtitle">minthiha.dev22@gmail.com</span>
                                 </div>
                             </div>
 
