--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
 
                                 <div>
                                     <h3 class="contact__title">Location</h3>
-                                    <span class="contact__subtitle">Myanmar - Hlaing township, Yangon</span>
+                                    <span class="contact__subtitle">Yangon, Myanmar</span>
                                 </div>
                             </div>
 
