--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="Resume" href="Resume/Resume.docx" class="button button--flex">
+                        <a download="Resume" href="#" class="button button--flex">
                         Download CV    <i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
@@ -221,7 +221,7 @@
 
                                 <div class="skills__data">
                                     <div class="skills__title">
-                                        <h3 class="skills__name">Bootstrap-5</h3>
+                                        <h3 class="skills__name">Bootstrap</h3>
                                         <span class="skills__number">70%</span>
                                     </div>
                                     <div class="skills__bar">
@@ -242,10 +242,30 @@
                                 <div class="skills__data">
                                     <div class="skills__title">
                                         <h3 class="skills__name">React</h3>
-                                        <span class="skills__number">50%</span>
+                                        <span class="skills__number">60%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__react"></span>
+                                    </div>
+                                </div>
+                                
+                                <div class="skills__data">
+                                    <div class="skills__title">
+                                        <h3 class="skills__name">Sass</h3>
+                                        <span class="skills__number">70%</span>
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__sass"></span>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <div class="skills__title">
+                                        <h3 class="skills__name">Figma</h3>
+                                        <span class="skills__number">50%</span>
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__figma"></span>
                                     </div>
                                 </div>
 
