--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="Resume" href="#" class="button button--flex">
+                        <a download="Resume" href="./Resume/MinThihaKyaw's Resume.pdf" class="button button--flex">
                         Download CV    <i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
